@@ -2,6 +2,7 @@ Sonic Candle 1.1.11
 ------------------
 -Added color pickers
 -Added splash screen (shown when opening a jar made with Gradle)
+-Added colorbox preview component
 
 Sonic Candle 1.1.10
 ------------------
